Add votes counter
